# yahll

./: .gitignore  CLAUDE.md  README.md  Yahll.md  pyproject.toml
docs/specs/: 2026-04-04-yahll-design.md
docs/superpowers/plans/: 2026-04-04-yahll-implementation.md  2026-04-07-phase3-self-upgrade.md  2026-04-09-mempalace-integration.md
docs/superpowers/specs/: 2026-04-07-phase3-self-upgrade-design.md  2026-04-08-vscode-extension-design.md  2026-04-09-mempalace-integration-design.md
patches/: PATCH-NOTES.md  session-2026-04-04-191822.json  session-2026-04-04-192019.json  session-2026-04-04-192050.json  session-2026-04-04-192107.json  session-2026-04-04-192124.json  session-2026-04-04-193144.json
skills/: yahll-architecture.md  yahll-memory.md  yahll-tools.md
skills/knowledge/: algorithm-reference.md  build-your-own-x.md  cs-self-learning.md  developer-resources.md  developer-roadmap.md  llms-from-scratch.md  ml-from-scratch.md  mlops-production.md  system-design-study.md
skills/superpowers/: debugging.md  new-feature.md  self-upgrade.md  session-start.md  tdd.md
src/yahll/: README.md  __main__.py  main.py  setup.py  tray.py
src/yahll.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/yahll/core/: _origin.py  agent.py  config.py  ollama_client.py
src/yahll/memory/: identity.py  knowledge.py  knowledge_base.py  palace.py  patches.py  setup.py  snapshots.py  upgrades.py
src/yahll/modes/: __init__.py  jarvis.py
src/yahll/server/: app.py  overlay.html  ui.html
src/yahll/tools/: bash.py  clipboard.py  desktop.py  files.py  registry.py  screenshot.py  search.py  self_tools.py  web_search.py
src/yahll/voice/: __init__.py  wakeword.py
tests/: test_agent.py  test_knowledge.py  test_ollama_client.py  test_palace.py  test_patches.py  test_tools.py  test_upgrades.py
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json  yahll-0.1.0.vsix
vscode-extension/src/: extension.ts
